# ephys-link

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  ephys_link.spec  main.py  mkdocs.yml  pyproject.toml  requirements.txt  write_pos.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  auto-formatters.txt  dependabot.yml  hatch.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: autoformat-and-lint.yml  autoformat.yml  build-docs.yml  build.yml  build.yml.off  code-quality.yml  codeql-analysis.yml  dependency-review.yml  deploy-docs.yml  release.yml  test.yml
docs/: index.md
docs/about/: installation.md
docs/development/: adding_a_manipulator.md  code_organization.md  index.md  jackhammer_mode.md  socketio_api.md
docs/development/source_code_documentation/: index.md
docs/experiment_automation/: index.md
docs/home/: citing.md  contact.md  how_it_works.md  installation.md  supported_manipulators.md
docs/stylesheets/: extra.css  mkdocstrings.css
docs/usage/: connecting_to_pinpoint.md  experiment_automation.md  index.md  launching_ephys_link.md  starting_ephys_link.md  using_ephys_link.md
ephys_link/: __init__.py  __main__.py  common.py  gui.py  manipulator.py  platform_handler.py  platform_manipulator.py  sensapex_handler.py  sensapex_manipulator.py  server.py
ephys_link/resources/: libum.lib
ephys_manip_link/: __main__.py  sensapex_handler.py  server.py
experiements/: read_pos.py  write_pos.py
nptraj-sensapex-link/tests/: register_manipulator_test.py
nptraj_sensapex_link/: common.py  manipulator.py  sensapex_handler.py  server.py
scripts/: draw_demo.py  drive_test.py  gen_ref_pages.py  jackhammer.py  logger_test.py  move_tester.py  new_scale_move.py  probe_crash_test.py  proxy_dev.py  read_to_file.py  server_tester.py  test_jackhammer.py
src/ephys_link/: __about__.py  __main__.py  common.py  emergency_stop.py  gui.py  platform_handler.py  platform_manipulator.py  server.py
src/ephys_link/back_end/: base_commands.py  platform_handler.py  server.py
src/ephys_link/bindings/: fake_binding.py  fake_bindings.py  mpm_binding.py  mpm_bindings.py  parallax_binding.py  ump_3_binding.py  ump_3_bindings.py  ump_4_binding.py  ump_4_bindings.py  ump_binding.py
src/ephys_link/front_end/: cli.py  console.py  gui.py
src/ephys_link/util/: base_binding.py  base_bindings.py  base_commands.py  common.py  console.py
src/ephys_link/utils/: base_binding.py  common.py  console.py  constants.py  converters.py  startup.py
src/nptraj_sensapex_link/: __init__.py  __main__.py  common.py  main.py  manipulator.py  sensapex_handler.py  server.py
tests/: __init__.py  calibration_test.py  can_write_test.py  conftest.py  draw_demo.py  drive_to_depth_test.py  get_manipulators_test.py  get_pos_test.py  inside_brain_test.py  move_test.py  register_manipulator_test.py  server_test.py  stop_test.py
tests/back_end/: test_platform_handler.py  test_server.py
tests/utils/: test_converters.py  test_startup.py
typings/sensapex/: __init__.pyi  accuracy_test.pyi  pressure_test.pyi  sensapex.pyi  test.pyi  utils.pyi
