[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ephys-link"
version = "1.0.0a1"
license = { file = "LICENSE" }

authors = [{ name = "Kenneth Yang", email = "kjy5@uw.edu" }]
maintainers = [{ name = "Kenneth Yang", email = "kjy5@uw.edu" }]

description = "A Python Socket.IO server that allows any Socket.IO-compliant application to communicate with manipulators used in electrophysiology experiments."
readme = "README.md"

keywords = ["socket-io", "manipulator", "electrophysiology", "ephys", "sensapex", "neuroscience", "neurotech", "virtualbrainlab", "new-scale"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

requires-python = ">=3.8, <3.13"
dependencies = [
    "aiohttp==3.9.1",
    "pyserial==3.5",
    "python-socketio==5.10.0",
    "pythonnet==3.0.3",
    "wheel==0.42.0",
    "sensapex==1.400.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "isort",
    "pylama[all]",
    "twine",
]

[project.urls]
"GitHub" = "https://github.com/VirtualBrainLab/ephys-link"
Documentation = "https://virtualbrainlab.org/ephys_link/installation_and_use.html"
"Issue Tracker" = "https://github.com/VirtualBrainLab/ephys-link/issues"

[project.scripts]
ephys-link = "ephys_link.__main__:main"
ephys_link = "ephys_link.__main__:main"
el = "ephys_link.__main__:main"