[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ephys-link"
dynamic = ["version"]
description = "A Python Socket.IO server that allows any Socket.IO-compliant application to communicate with manipulators used in electrophysiology experiments."
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-only"
keywords = ["socket-io", "manipulator", "electrophysiology", "ephys", "sensapex", "neuroscience", "neurotech", "virtualbrainlab", "new-scale"]
authors = [{ name = "Kenneth Yang", email = "kjy5@uw.edu" }]
maintainers = [{ name = "Kenneth Yang", email = "kjy5@uw.edu" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "aiohttp==3.12.14",
    "colorama==0.4.6",
    "keyboard==0.13.5",
    "packaging==25.0",
    "platformdirs==4.3.8",
    "pyserial==3.5",
    "python-socketio[asyncio_client]==5.13.0",
    "requests==2.32.4",
    "sensapex==1.400.4",
    "rich==14.0.0",
    "vbl-aquarium==1.0.0"
]

[project.urls]
Documentation = "https://virtualbrainlab.org/ephys_link/installation_and_use.html"
Issues = "https://github.com/VirtualBrainLab/ephys-link/issues"
Source = "https://github.com/VirtualBrainLab/ephys-link"

[project.scripts]
ephys-link = "ephys_link.__main__:main"
ephys_link = "ephys_link.__main__:main"
el = "ephys_link.__main__:main"

[tool.hatch.version]
path = "src/ephys_link/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/.idea", "/docs"]

[tool.hatch.envs.default]
installer = "uv"
python = "3.13"
dependencies = [
    "pyinstaller==6.14.2",
    "basedpyright==1.29.5",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",
    "pytest-asyncio==1.0.0"
]
[tool.hatch.envs.default.scripts]
exe = "pyinstaller.exe ephys_link.spec -y -- -d && pyinstaller.exe ephys_link.spec -y"
exe-clean = "pyinstaller.exe ephys_link.spec -y --clean"
check = "basedpyright"
check-watched = "basedpyright --watch"
tests = "pytest"
cov = "pytest --cov=ephys_link --cov-report=html --cov-report=term-missing"

[tool.hatch.envs.docs]
installer = "uv"
python = "3.13"
skip-install = true
dependencies = [
    "mkdocs-material==9.6.11",
    "mkdocstrings-python==1.16.10",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-section-index==0.3.10"
]
[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve"
build = "mkdocs build"

[tool.ruff]
exclude = ["typings"]
unsafe-fixes = true

[tool.basedpyright]
include = ["src/ephys_link", "tests"]
strict = ["src/ephys_link", "tests"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source_pkgs = ["ephys_link"]
branch = true
omit = [
    "tests/*",
    "scripts/*",
]